<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <repositories>
        <repository>
            <id>qa-regression</id>
            <url>
                https://repo.maven.apache.org/maven2/
            </url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dicefm</groupId>
    <artifactId>dice-automation</artifactId>
    <version>1.0</version>
    <name>Dice Automation</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <serenity.version>3.3.2</serenity.version>
        <serenity.cucumber.version>3.3.2</serenity.cucumber.version>
        <open.csv.version>5.5.2</open.csv.version>
        <log4j.version>2.17.1</log4j.version>
        <slf4j.version>2.0.0-alpha6</slf4j.version>
        <jsch.version>0.1.55</jsch.version>
        <java.faker.version>1.0.2</java.faker.version>
        <java.version>17</java.version>
        <cucable.plugin.version>1.9.0</cucable.plugin.version>
        <maven.failsafe.plugin.version>3.0.0-M7</maven.failsafe.plugin.version>
        <maven.surefire.plugin.version>3.0.0-M7</maven.surefire.plugin.version>

        <glue>stepDefs</glue>
        <tags></tags>
        <webdriver.provided.mydriver>drivers.SeleniumGridSerenityDriver</webdriver.provided.mydriver>
        <cucumber.options></cucumber.options>
        <webdriver.perf.driver></webdriver.perf.driver>
        <management.url></management.url>
        <browser>chrome</browser>
        <environment></environment>
        <baseStore></baseStore>
        <cucumberRunnerTemplate>cucable-runner-TEST.template</cucumberRunnerTemplate>
        <runners>**/*IT.java</runners>
        <featuresDirectory>${project.basedir}/src/test/resources/features/</featuresDirectory>
        <failsafe.rerunFailingTestsCount>1</failsafe.rerunFailingTestsCount>

    </properties>

    <dependencies>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity.cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${open.csv.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${java.faker.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.9</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.4.7</version>
        </dependency>
        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.22.0</version>
            <scope>test</scope>
        </dependency>
        <!-- LOGGING DEPENDENCIES FOR LOG4J 2 -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.10</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!--CUCABLE PLUGIN FOR PARALLEL RUNNING OF SCENARIOS-->

            <plugin>
                <groupId>com.trivago.rta</groupId>
                <artifactId>cucable-plugin</artifactId>
                <version>${cucable.plugin.version}</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>parallel</goal>
                        </goals>
                        <configuration>
                            <sourceRunnerTemplateFile>
                                ${project.basedir}/src/test/resources/templates/${cucumberRunnerTemplate}
                            </sourceRunnerTemplateFile>
                            <sourceFeatures>${featuresDirectory}</sourceFeatures>
                            <generatedFeatureDirectory>${project.basedir}/src/test/resources/parallel/features
                            </generatedFeatureDirectory>
                            <includeScenarioTags>${tags}</includeScenarioTags>
                            <generatedRunnerDirectory>${project.basedir}/src/test/java/parallel/runners
                            </generatedRunnerDirectory>
                            <numberOfTestRuns>1</numberOfTestRuns>
                            <logLevel>off</logLevel>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <executions>
                    <execution>
                        <id>create-test-users</id>
                        <phase>test</phase>
                    </execution>
                </executions>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <threadCount>8</threadCount>
                    <includes>
                        <include>testSetup/CheckSite.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <management.url>${management.url}</management.url>
                        <browser>${browser}</browser>
                        <environment>${environment}</environment>
                        <webdriver.provided.mydriver>${webdriver.provided.mydriver}
                        </webdriver.provided.mydriver>
                    </systemPropertyVariables>
                    <skip>${skipUnit}</skip>
                    <argLine>--enable-preview -Xms1024m -Xmx1400m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <includes>
                        <include>${runners}</include>
                    </includes>
                    <parallel>all</parallel>
                    <forkCount></forkCount>
                    <threadCount>9</threadCount>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <trimStackTrace>false</trimStackTrace>
                    <disableXmlReport>true</disableXmlReport>
                    <systemPropertyVariables>
                        <serenity.browser.width>1440</serenity.browser.width>
                        <serenity.browser.height>1440</serenity.browser.height>
                        <management.url>${management.url}</management.url>
                        <baseStore>${baseStore}</baseStore>
                        <browser>${browser}</browser>
                        <environment>${environment}</environment>
                        <cucumber.option>${cucumber.options}</cucumber.option>
                        <webdriver.provided.mydriver>${webdriver.provided.mydriver}</webdriver.provided.mydriver>
                        <failsafe.rerunFailingTestsCount>${failsafe.rerunFailingTestsCount}
                        </failsafe.rerunFailingTestsCount>
                    </systemPropertyVariables>
                    <skipTests>${skipIT}</skipTests>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <argLine>--enable-preview -Xms1024m -Xmx1400m -Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.serenity-bdd.maven.plugins</groupId>
                <artifactId>serenity-maven-plugin</artifactId>
                <version>${serenity.version}</version>
                <configuration>
                    <reports>single-page-html</reports>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>net.serenity-bdd</groupId>
                        <artifactId>serenity-single-page-report</artifactId>
                        <version>${serenity.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>serenity-reports</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>DICEFM</id>
            <properties>
                <tags>@test</tags>
                <browser>chrome</browser>
                <cucumberRunnerTemplate>cucable-runner-TEST.template</cucumberRunnerTemplate>
            </properties>
        </profile>
    </profiles>
</project>